--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,161 @@
-.App {
+
+header{
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav-link{
+  margin-right:100px !important ;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.products{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  background-color: #eee;
+  margin-left: 5px !important;
+ 
 }
 
-.App-link {
-  color: #61dafb;
+.Item{
+  background-color: rgb(185, 201, 44);
+  /* width: 200px !important; */
+  margin: 0px 4px 4px 4% !important;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.Item-content{
+  font-size: 15px !important;
+}
+
+.Item-btn{
+  height: 35px !important;
+  margin-bottom:5px !important ;
+}
+
+ .card-more{
+   position: relative;
+   top:0;
+ }
+
+ ::placeholder {
+  color: black;
+  opacity: 1; /* Firefox */
+}
+
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+  color: black;
+ }
+ 
+ ::-ms-input-placeholder { /* Microsoft Edge */
+  color: black;
+ }
+
+ .email{
+  border:1px solid black !important;
+  height: 30px !important;
+ }
+
+ .address{
+  border:1px solid black !important;
+  height: 90px !important;
+ }
+ 
+ .radio-btn{
+   margin-right: 30px;
+ }
+
+ .navbar{
+  width:auto;
+  height:0.5%;
+  border: 1px solid black;
+  border-radius:6px;
+  box-shadow: 4px 3px gray;
+  margin:2px; 
+  position: sticky;
+  top: 0;
+  transition-timing-function: ease-in;
+  transition: 0.5
+}
+
+.nav-wrapper{
+  padding-left: 10px;
+}
+
+.nav-link:hover ul{
+  display: block ;
+}
+.nav-li{
+  margin-left: 14px;
+}
+
+.category{
+  margin-left: 5px !important;
+  z-index: 1;
+  background-color: beige;
+}
+
+.logo{
+  width: 80px!important;
+}
+ /* For parallax effect on both small and big screen */
+.parallax02{
+  height: 160px;
+  margin-left: 0.5%;
+  margin-right: 0.5%;
+}
+@media only screen and (max-width: 600px) {
+  .parallax-container{
+   height: 50px;
   }
-  to {
-    transform: rotate(360deg);
+}
+
+
+@media only screen and (max-width: 800px) {
+  nav img{
+    position: relative;
+    top: 0px;
+    left: 60%;
+    border-radius: 8px;
+    border: 1px solid black;
   }
+}
+
+li div {
+  margin-right: 10px !important;
+  margin-left: 5px !important;
+  
+}
+
+.logo-name {
+  margin-left: 10px!important;
+  text-shadow: 3px 2px  rgb(17, 16, 16);
+}
+
+.services{
+  position:relative !important;
+ font-weight: 600 !important;
+  margin: 0px 4px 0px 4% !important;
+  width: 300px !important;
+  height: 350px !important;
+  margin-bottom: 10px !important;
+}
+
+  .contact-service{
+    position:absolute !important;
+    top: 55% !important;
+    width: 300px !important;
+    
+    /* min-height: calc(74vh - 70px); */
+  }
+ .footer{
+  margin: 2px !important;
+  width: auto !important;
+ }
+.home{
+  background-color: #eee;
+  margin-left: 0.5%;
+  margin-right: 0.5%;
+  padding: 1.5% !important;
+}
+.home02{
+  margin-left: 0.5%;
+  margin-right: 0.5%;
 }
